cosmicrafts-deployment.yaml
# cosmicrafts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmicrafts-deployment
  labels:
    app: cosmicrafts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmicrafts-app
  template:
    metadata:
      labels:
        app: cosmicrafts-app
    spec:
      containers:
      - name: cosmicrafts-container
        image: gcr.io/cosmicrafts-multiplayer/nodejs-app:latest  # Change if needed
        ports:
          - containerPort: 5173
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
