cosmicrafts-ingress.yaml
# cosmicrafts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmicrafts-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - cosmicrafts.com
      secretName: cosmicrafts-com-tls
  rules:
    - host: cosmicrafts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmicrafts-service
                port:
                  number: 80
